# hubris-wiki

./: .terminal-theme.json  HUBRIS.md  README.md  package-lock.json  package.json  pyproject.toml  quartz.config.ts  quartz.layout.ts
content/: index.md  pyproject.toml
content/Basic Mechanics/: Action Resolution.md  Proficiency.md
content/Character Options/Backgrounds/: Scholar.md
content/Character Options/Classes/: Barbarian.md  Beguiler.md  Bolster.md  Elementalist.md  Fighter.md  Knight.md  Rogue.md  Wizard.md
content/Character Options/Powers/Durations/: 2 Rounds.md  3 Rounds.md  Bonus Action.md  Encounter.md  Long Rest.md
content/Character Options/Powers/Ranges/: Burst.md  Cone.md  Long.md  Long<Burst>.md  Long<Fork>.md  Short.md  Short<Burst>.md  Touch.md
content/Character Options/Tags/Bludgeoning/: Shock and Awe.md
content/Character Options/Tags/Nature/: Plant Growth III.md  Plentiful Berries.md  Poisonous Thorns.md
content/Character Options/Tags/Piercing/: Glance True.md
content/Character Options/Tags/Slashing/: Probing Critical.md
content/Playing the Game/: Conditions.md
content/Playing the Game/Combat/: Damage.md  Health & Stamina.md  Movement.md  Structured Time.md  Weapons.md
content/scripts/: tweaks.py
content/wiki/Basic Mechanics/: Attributes.md
content/wiki/Character Options/Backgrounds/: Hermit.md  Laborer.md  Merchant.md  Noble.md  Sailor.md  Spirit-Blooded.md  Urchin.md
content/wiki/Character Options/Classes/: Barbarian.md  Beguiler.md  Fighter.md  Knight.md  Sharpshooter.md  (+1 more)
content/wiki/Playing the Game/: Conditions.md
(+1504 files in other folders)
